# d3m

./: README.md  install_datasets.sh  pyproject.toml  requirements.txt
d3m/: __init__.py  _metadata.py
d3m/configs/: __init__.py  model_configs.py  train_configs.py
d3m/models/: __init__.py  base.py  bert_model.py  conv_model.py  mlp_model.py  resnet_model.py  utils.py
d3m/monitors/: __init__.py  bayesian_monitor.py  bert_monitor.py  full_information_monitor.py  monitor.py  utils.py
data/: __init__.py  camelyon17_data.py  cifar10_data.py  civilcomments_data.py  common.py  synthetic_data.py  uci_data.py
experiments/: run.py  utils.py
experiments/configs/: camelyon17_best.yaml  cifar10_best.yaml  defaults.yaml  uci_best.yaml
experiments/configs/d3m/: base.yaml
experiments/configs/dataset/: camelyon17.yaml  cifar10.yaml  civilcomments.yaml  defaults.yaml  uci.yaml
experiments/configs/hydra/: defaults.yaml
experiments/configs/model/: bert_model.yaml  conv_model.yaml  defaults.yaml  mlp_model.yaml  resnet_model.yaml
experiments/configs/train/: base.yaml  camelyon17.yaml
experiments/configs/wandb_cfg/: wilds.yaml
results/: results_uci_100_final.csv  results_uci_10_final.csv  results_uci_200_final.csv
tutorials/: classification.ipynb
